--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,9 +6,6 @@
 // VARIABLES
 
 //COLOURS
-
-
-
 $cream: #FFFAEE;
 $nutella:#5C2C1F;
 $brightPink:#EC41B0;
@@ -20,7 +17,7 @@ $pink:  #f6AFEF;
 //FONT FAMILY
 
 $reenie: 'Reenie Beanie', cursive;
-$playfair: 'Playfair Display', serif;
+$playfair: 'Molengo', sans-serif;
 
 
 // BASE STYLES
@@ -34,6 +31,9 @@ body{
 	font-family: $playfair;
 	background: $cream;
 }
+form{
+	margin:0;
+}
 
 .container{
 	max-width: 1080px;
@@ -43,6 +43,12 @@ body{
 //FRONT PAGE STYLES
 .frontPage{
 	background-color: $cream;
+	position:fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 15;
 }
 .frontPageWrapper{
 	max-width:1080px;
@@ -51,10 +57,10 @@ body{
 	position:relative;
 	h1{
 		text-align: center;
-		color: $nutella;
-		background: $orange;
+		color: darken($orange,5%);
 		padding:2rem;
 		width:100%;
+		margin-top: 0;
 	}
 	h3{
 		text-align: center;
@@ -63,7 +69,8 @@ body{
 		letter-spacing: 2px;	
 	}
 	
-	p.ournames{
+	p.ournames,
+	p.credit{
 		color: darken($nutella, 10%);
 		font-size: 1.8rem;
 		text-align: center;
@@ -73,29 +80,8 @@ body{
 			visited:none;
 		}
 	}
-	footer{
-		margin:0;
-		margin-top: 4rem;
-		background: $brightPink;
-		padding-top: 4rem;
-		width:100%;	
-		position:absolute;
-		bottom:0;
-		display:flex;
-		justify-content:space-between;
-		flex-direction:row;
-		p{
-			color:darken($nutella,10%);
-			display:inline-block;
-			margin:0;
-			padding:10px;
-			// width:50%;
-		}
-		a{
-			color:$cream;
-			text-decoration: none;
-
-		}
+	p.credit{
+		font-size: 1.2rem;
 	}
 
 }
@@ -107,8 +93,44 @@ body{
 
 }
 
+.jar-wrapper{
+	position:absolute;
+	top:50%;
+	transform: translateY(-50%);
+
+}
+
 
 // GENERALQUESTIONAIRE STYLES
+
+.credit-load{
+	position:absolute;
+	padding:2rem;
+	&:hover .creditP{
+		opacity:1;
+	}
+
+
+	.jar{
+		position:fixed;
+		width:50px;
+		transform:rotate(-15deg);
+		transition: all .3s ease;
+		z-index: 5;
+		
+	}
+	.creditP{
+		color:$brightPink;
+		font-family: $reenie;
+		position:fixed;
+		padding-left: 7rem;
+    	font-size: 3rem;
+    	opacity:0;
+    	transition: all .3s ease;
+    	z-index: 5;
+
+	}
+}
 
 h1,
 h2{
@@ -214,6 +236,10 @@ nav .active a {
 		display:flex;
 		justify-content:space-around;
 		align-items:center;
+	}
+
+	input[type='text']:focus + submit{
+		
 	}
 	
 	input[type='radio']:checked + label{
@@ -364,6 +390,7 @@ input[type='submit']:active{
 
 .recipeContainer{
 	width:80%;
+	max-width: 850px;
 	margin:0 auto;
 	h1{
 		text-align: center;
@@ -376,23 +403,50 @@ input[type='submit']:active{
 	li{
 		font-size: 2rem;
 	}
-	.recipeIngredients,
-	.recipeSteps{
-		text-align: center;
-		font-size: 6rem; 
+	
+	.ingredients-container{
+		display:flex;
+		align-items:center;
+		
+	}
+
+	.ingredient-wrapper{
+		width:100%;
+		
+	}
+
+
+	.ingredientItems{
+		li{
+			font-size: 1.7rem;
+			color: darken($nutella, 10%);	
+		}
+		
 	}
 
 	h2.recipeIngredients{
-		background: $orange;
-		color:$nutella;
+		color:$orange;
+		font-size: 4.3rem;
+		margin:0;
 		padding:1rem;
-		margin:1rem 0;
 	}
 	.recipeSteps{
-		background:$brightPink;
-		color:$nutella;
+		color:$brightPink;
 		padding:1rem;
 		margin: 1rem 0;
+		clear:both;
+		font-size: 4.3rem;
+
+	}
+
+	ol.steps{
+		// width:95%;
+		// margin:0 auto;
+		li{
+			font-size: 1.7rem;
+			 color:darken($nutella, 10%);
+
+		}
 	}
 
 	p{
@@ -404,18 +458,26 @@ input[type='submit']:active{
 		text-align: center;
 		margin:0;
 	}
+
+	.img-wrapper{
+		width:50%;
+	}
 	
 	img{
-		width:100%;
+		max-width:100%;
+		max-height:100%;
+
 	}
 	.goBack{
-		width:40%;
-		margin:50px auto;
-		padding:2rem;
-		background:$nutella;
-		text-align: center;
-		border:3px solid $brightPink;
-		border-radius: 15px;
+		width: 30%;
+    	display: block;
+    	margin: 50px auto;
+	    padding: 2rem;
+	    background: $brightPink;
+	    text-align: center;
+	    color: #EC41b0;
+	    border: 3px solid #EC41B0;
+	    border-radius: 20px;
 		a{
 			color:$cream;
 			text-decoration: none;
@@ -468,6 +530,13 @@ input[type='submit']:active{
 			font-size: 4rem;
 		}
 	}
+}
+
+@media(max-width:725px){
+	.ingredients-container{
+		flex-direction:column;	
+	}
+
 }
 
 @media (max-width: 686px){
@@ -578,6 +647,12 @@ input[type='submit']:active{
 		}
 	}
 	
+}
+
+@media (max-width:430px){
+	.recipeContainer .goBack{
+		width:auto;
+	}
 }
 
 @media (max-width:350px){
